CHANGES IN VERSION 1.3.2
------------------------
 o import termSim and combineScores from GOSemSim. <2012-06,14, Thu>
 o optimize setReadable <2012-05-09, Wed>
 o bug fixed of setReadable method. For those unmapped genes, return the original gene ID. <2012-05-15, Tue>
 o fill color in barplot for Ontology classification. <2012-05-22, Tue>
 
CHANGES IN VERSION 1.3.1
------------------------
 o update color scheme of cnetplot <2012-04-10, Tue>
 o add simplot for plotting semantic similarity matrix <2012-04-20, Fri>
 o bug fixed of combineScore function for DO semantic similarity matrix
   which containing NA rows of NA coloumns <2012-04-20, Fri>
 o export doSim and geneSim functions <2012-04-20, Fri>

CHANGES IN VERSION 1.1.12
------------------------
 o implement barplot for enrichResult <2012-03-18, Sun>
 o bug fixed for setReadable method <2012-03-19, Mon>
 o add logFC parameter for cnet plot, support color gene nodes by
   their expression value (log fold change) <2012-03-21, Wed>
 o add mapping entrezgene ID and gene Name for organisms
   other than human, mouse and yeast. <2012-03-22, Thu>
 o bug fixed for attempt to name logFC, when it is NULL. <2012-03-22, Thu>
 o optimized readable method. <2012-03-26, Mon>

CHANGES IN VERSION 1.1.11
------------------------
 o setReadable method for mapping gene ID to gene Symbol in enrichResult instance. <2012-03-12, Mon>
 o export method show. <2012-03-12, Mon>

CHANGES IN VERSION 1.1.10
------------------------
 o import plot summary from stats4, for BiocGenerics (version 0.1.10) removed them <2012-03-03, Sat>
 o Add DO2ALLEG and EG2ALLDO, for mapping undirecte annotation. <2012-03-03, Sat>
 o update vignette <2012-03-06, Tue>

CHANGES IN VERSION 1.1.9
------------------------
 o fixed BibTeX database file .bib.
   month = , must be month = someMonth, or totally deleted,
   leave it blank will cause texi2dvi failed. <2012-03-01, Thu>
 o update IC data and DO-EG mapping data. <2012-03-01, Thu>

CHANGES IN VERSION 1.1.8