@@ -157,12 +157,13 @@ EXTID2NAME <- function(geneID, organism) {
         return("")
     }
 
-    supported_Org <- c("human", "mouse", "yeast")
+    supported_Org <- c("human", "mouse", "yeast", "zebrafish")
     if (organism %in% supported_Org) {
         annoDb <- switch(organism,
                          human = "org.Hs.eg.db",
                          mouse = "org.Mm.eg.db",
-                         yeast = "org.Sc.sgd.db"
+                         yeast = "org.Sc.sgd.db",
+                         zebrafish = "org.Dr.eg.db"
                          )
         require(annoDb, character.only=TRUE)
         annoDb <- eval(parse(text=annoDb))
